--- a/zmqpp.doxygen.conf
+++ b/zmqpp.doxygen.conf
@@ -1419,7 +1419,7 @@ INCLUDE_FILE_PATTERNS  =
 # undefined via #undef or recursively expanded use the := operator
 # instead of the = operator.
 
-PREDEFINED             =
+PREDEFINED             = ZMQ_VERSION_MAJOR=1000
 
 # If the MACRO_EXPANSION and EXPAND_ONLY_PREDEF tags are set to YES then
 # this tag can be used to specify a list of macro names that should be expanded.
