--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: cpp
 
 before_script:
   # Perform regression test build against ZeroMQ v4.x
-  - git clone git@github.com:zeromq/zeromq4-x.git
+  - git clone git://github.com/zeromq/zeromq4-x.git
   - cd zeromq4-x
   - ./autogen.sh
   - ./configure && make
