--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@
 language: cpp
 
 before_script:
+  # Requirements
+  - sudo apt-get install libboost-all-dev
+
   # Perform regression test build against ZeroMQ v4.x
   - git clone git://github.com/zeromq/zeromq4-x.git
   - cd zeromq4-x
