--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,46 @@
-build
-docs
+# http://www.gnu.org/software/automake
+Makefile.in
+
+# http://www.gnu.org/software/autoconf
+/autom4te.cache
+/aclocal.m4
+/compile
+/configure
+/depcomp
+/install-sh
+/missing
+/build-aux
+
+# Generated files
+autoscan.log
+libtool
+ltmain.sh
+stamp-h1
+config.*
+Makefile
+Makefile.in
+.deps
+.libs
+*.o
+*.lo
+*.la
+*_test
+coverage.info
+coverage
+*.gcno
+*.gcda
+Doxyfile
+/doc
+.dirstamp
+*.pc
+*.log
+*.trs
+
+# Generated binaries
+src/client/zmqpp
+
+# Hideous eclipse
+.autotools
 .cproject
 .project
-.settings
+.settings/
