--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,4 +1,15 @@
-CXXFLAGS=-O0 -g --std=c++11 -Wall
-CPPFLAGS=-I../src
-LDFLAGS=-L../build/max-g++ 
-LDLIBS=-lzmqpp -lzmq
+CPP			    = g++
+RM			    = rm -f
+CPPFLAGS		= -Wall -I. -O2 -std=c++11 -g
+LDFLAGS			= -lpthread -lzmqpp -lzmq -lsodium -Wl,--no-as-needed
+SOURCES			= $(wildcard *.cpp)
+TARGETS			= $(SOURCES:%.cpp=%)
+
+all:	${TARGETS}
+
+clean:
+	${RM} *.obj *~* ${TARGETS}
+
+${TARGETS}:
+	${CPP} ${CPPFLAGS} -o $@ ${@:%=%.cpp} ${LDFLAGS}
+
