--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ install:
   - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8"; fi
   # Requirements
   - sudo apt-get install libboost-all-dev
+  - git clone git://github.com/jedisct1/libsodium.git
+  - ( cd libsodium; ./autogen.sh; ./configure; make check; sudo make install; sudo ldconfig )
 
 before_script:
   # Perform regression test build against ZeroMQ v4.x
