--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ before_script:
   - git clone git://github.com/zeromq/libzmq.git
   - cd libzmq
   - ./autogen.sh 
-  - ./configure --with-libsodium && make check
+  - ./configure --with-libsodium && make
   - sudo make install
   - sudo ldconfig
   - cd ../
