Fix build in some rare case.
Problem: My previous update to CMake was incomplete. It looks
like if zmq.h was present in /usr/local/include it had precedence
over the one from libzmq folder (that we built with CMake).
This patch to CMakeFile make sure that we use the custom include
path first, thus avoiding this problem.

Problem: curve.hpp missed an include of zmq.h, therefore causing
ZMQ_VERSION_MAJOR to be undefined.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
   - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8"; fi
   # Requirements
-  - sudo apt-get install libboost-all-dev
+  - sudo apt-get install -qq libboost-all-dev
 
 before_script:
   # Build, check, and install libsodium
