--- a/.travis.yml
+++ b/.travis.yml
@@ -15,15 +15,17 @@ env:
 
 before_install:
   - if [ "$CXX" == "g++" ]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; fi
+  - sudo add-apt-repository -y ppa:smspillaz/cmake-2.8.12
   - sudo apt-get update
 
 install:
- # g++4.8.1
-  - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
+  # g++4.8.1
+  - if [ "$CXX" = "g++" ]; then sudo apt-get install -q -y g++-4.8; fi
   - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8"; fi
+  # cmake (2.8.12 or higher)
+  - sudo apt-get install -q -y cmake-data cmake
   # Requirements
-  - sudo apt-get install -qq libboost-all-dev
+  - sudo apt-get install -q -y libboost-all-dev
 
 script:
   - ./travis.sh
-  
